# spotify-bot

./: .gitignore  config.json.example  setup.cfg  setup.py
spotify_bot/: bot.py  config.json.example
src/: bot.py
