[metadata]
name = spotify-bot
version = 1.0.0
license = GNU General Public License v3.0
description = Spotify bot for twitch
long_description = file: README.rst
author = Nzxtime

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires = ['twitchio', 'spotipy']

[options.packages.find]
where = src.spotify-bot